added swagger ffor notes
