# app/Models/Notes.php
@@ -5,6 +5,23 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ *
+ * @OA\Schema(
+ * required={"title"},
+ * @OA\Xml(name="Notes"),
+ * @OA\Property(property="id", type="integer", readOnly="true", example="1"),
+ * @OA\Property(property="user_id", type="integer", readOnly="true", example="1"),
+ * @OA\Property(property="title", type="string", maxLength=255, example="Title name"),
+ * @OA\Property(property="name", type="string", example="This is a description "),
+ * @OA\Property(property="created_at", type="string", format="date-time", description="Initial creation timestamp", readOnly="true"),
+ * @OA\Property(property="updated_at", type="string", format="date-time", description="Last update timestamp", readOnly="true"),
+ * )
+ *
+ * Class Notes
+ *
+ */
+
 class Notes extends Model
 {
     use HasFactory;
